# agent

./: .gitignore  Cargo.toml  DESIGN.md  PROCESS.md  PROGRESS.md  README.md  ROADMAP.md  process-cli.sh
.process/: .state.yaml  config.example.yaml  config.yaml  decisions_log.yaml  gap-report.yaml  seed.example.yaml
.process/branches/: GAP-002.yaml
auto/: README.md
auto/1e-project/: ARCHITECTURE_DESIGN.md  DEVELOPMENT.md  Makefile
auto/1e-project/githooks/: pre-commit  pre-push
auto/1e-project/github-workflows/: auto-review.yml  ci.yml
auto/1e-project/scripts/: setup-hooks.sh
auto/1e-project/vscode/: extensions.json  settings.json  tasks.json
auto/universal/claude/: AUTO_CODE_REVIEW.md  QUICK_START.md
auto/universal/claude/workflows/: code-and-review.md
auto/universal/scripts/: BUDGET_WORKFLOW.md  code-review-workflow.sh  prepare-review.sh  save-review-result.sh
crates/process-ai/: Cargo.toml
crates/process-ai/src/: provider.rs  registry.rs
crates/process-ai/src/providers/: claude.rs  claude_cli.rs  manual.rs  mod.rs  ollama.rs  openai.rs
crates/process-checks/: Cargo.toml
crates/process-checks/src/: lib.rs  lint.rs  sensitive.rs  test.rs  todo.rs
crates/process-config/: Cargo.toml
crates/process-config/src/: config.rs
crates/process-core/: Cargo.toml
crates/process-core/src/: lib.rs  manifest.rs  pass.rs  pass_manager.rs  phase.rs  state.rs
crates/process-generators/: Cargo.toml
crates/process-generators/src/: cicd.rs  githooks.rs  ide.rs  lib.rs  makefile.rs
crates/process-reviews/: Cargo.toml
crates/process-reviews/src/: lib.rs  template.rs
crates/process-reviews/src/templates/: architecture.rs  general.rs  mod.rs  performance.rs  security.rs
legacy/v1/: README.md  RUST_ARCHITECTURE.md  process-cli.sh
legacy/v1/dot_process_backup/: .ai_config  REJECTED_APPROACHES.md  decisions_log.yaml  diverge_summary.yaml  friction.yaml  learnings.yaml  rules.yaml  seed.yaml  skeleton.yaml
process-cli/: README.md
process-cli/docs/: ARCHITECTURE.md  COMMANDS.md  CONFIGURATION.md  EXTENDING.md
src/: cli.rs  decision_log.rs  main.rs  prompts.rs  utils.rs
src/commands/: adopt_all.rs  adopt_gap_analysis.rs  adopt_infer_conventions.rs  adopt_scan_dependencies.rs  adopt_scan_git_history.rs  adopt_scan_structure.rs  adopt_utils.rs  ai_config.rs  branch_abuse.rs  branch_gate.rs  branch_implement.rs  branch_merge.rs  branch_new.rs  branch_review.rs  branch_start.rs  check.rs  converge.rs  converge_challenge.rs  converge_validate.rs  diverge.rs  diverge_challenge.rs  diverge_validate.rs  done.rs  friction.rs  generate.rs  help.rs  init.rs  learn.rs  mod.rs  pass.rs  postmortem.rs  seed_validate.rs  skeleton.rs  skeleton_validate.rs  stabilize.rs  status.rs
templates/prompts/_default/: adopt_gap_analysis.md.tera  adopt_infer_conventions.md.tera  adopt_scan_git_history.md.tera  branch.implement.md.tera  branch_abuse.md.tera  branch_review.md.tera  converge.md.tera  diverge.md.tera  postmortem.md.tera  review.architecture.md.tera  review.general.md.tera  review.performance.md.tera  review.security.md.tera  skeleton.md.tera
templates/prompts/claude/: converge.md.tera  diverge.md.tera  skeleton.md.tera
